# SharedString

./: .gitignore  CMakeLists.txt
src/: SharedString.h  main.cpp  tb_constructors.cpp  test_compare.cpp  test_constructors.cpp  test_find.cpp  test_split.cpp  test_static.cpp  test_stream.cpp  test_substr.cpp
